--- a/theme/css/default.css
+++ b/theme/css/default.css
@@ -1424,12 +1424,7 @@ aside.gdbar img {
   slides slide {
     display: block !important;
     position: relative;
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(85%, #ffffff), color-stop(100%, #e6e6e6));
-    background: -webkit-linear-gradient(#ffffff, #ffffff 85%, #e6e6e6);
-    background: -moz-linear-gradient(#ffffff, #ffffff 85%, #e6e6e6);
-    background: -o-linear-gradient(#ffffff, #ffffff 85%, #e6e6e6);
-    background: linear-gradient(#ffffff, #ffffff 85%, #e6e6e6);
-    background-color: white;
+    background: white;
     -webkit-transform: none !important;
     -moz-transform: none !important;
     -ms-transform: none !important;
